--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.5",
     "express": "^4.21.2",
     "prisma": "^6.5.0"
   },
